# dkbb

./: .gitignore  Cargo.toml  rfc.md  source.k
crates/ide/: Cargo.toml
crates/ide-db/: Cargo.toml
crates/ide-db/src/: ir.rs  lib.rs  line_index.rs
crates/ide/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: helper.rs  helpers.rs  ir.rs  lib.rs
crates/lsp/src/helper/: line_index.rs  mod.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  dyna_nodes.rs  lib.rs  parse.rs  reparsing.rs  syntax_error.rs  syntax_node.rs
crates/text-edit/src/: lib.rs
dk-lsp/: Cargo.toml
dk-lsp/src/: helpers.rs  main.rs
dk-parser/: Cargo.toml  dyna.pest
dk-parser/src/: lib.rs  main.rs
