[package]
name = "dk-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dk-parser = { path = "../dk-parser"}
pest = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
lsp-document = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
dashmap = "5.1.0"

# [dev-dependencies]
# async-tungstenite = { version = "0.18", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
ropey = "1.6.0"

