[package]
name = "ide-db"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }
# cov-mark = "2.0.0-pre.1"
# tracing = "0.1.35"
# rayon = "1.6.1"
# fst = { version = "0.4.7", default-features = false }
# rustc-hash = "1.1.0"
# once_cell = "1.17.0"
# either = "1.7.0"
# itertools = "0.10.5"
# arrayvec = "0.7.2"
# indexmap = "1.9.1"
# memchr = "2.5.0"

# local deps
# base-db.workspace = true
# parser.workspace = true
syntax.workspace = true
text-edit.workspace = true
