[package]
name = "ide"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
lsp-document = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
dashmap = "5.1.0"
syntax.workspace = true
ide-db.workspace = true

#[dev-dependencies]
ropey = "1.6.0"
tracing-subscriber = "0.3"
# async-tungstenite = { version = "0.18", features = ["tokio-runtime"] }

